--- a/SpringBaseTasks/src/main/resources/application.yml
+++ b/SpringBaseTasks/src/main/resources/application.yml
@@ -1,1 +1,8 @@
-
+spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
+  jpa:
+    generate-ddl: true
+    hibernate:
+      ddl-auto: create
+    show-sql: true
